# paritycx

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md
api/: package.json  tsconfig.json
api/src/: server.ts
api/src/middleware/: auth.ts  error.ts
api/src/routes/: analyze.ts  context.ts  health.ts  programs.ts  skills.ts
api/src/services/: analysis.ts  context.ts  skills.ts
api/src/utils/: logger.ts
programs/parity/: Cargo.toml
programs/parity/src/: context_engine.rs  errors.rs  lib.rs  skills.rs  state.rs
programs/parity/src/instructions/: analysis.rs  auditor.rs  badge.rs  context.rs  mod.rs  registry.rs  skill_registry.rs
sdk/python/: pyproject.toml
sdk/python/parity_sdk/: __init__.py  analysis.py  client.py  constants.py  context.py  parser.py  skills.py  solana_provider.py  types.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: analysis.ts  client.ts  constants.ts  context.ts  index.ts  parser.ts  skills.ts  solana.ts  types.ts
skills/best-practices/: SKILL.md
skills/deep-audit/: SKILL.md
skills/gas-optimization/: SKILL.md
skills/security-audit/: SKILL.md
